# FinalProject

./: .gitignore  CMakeLists.txt
include/: CLI.h  CSV_Editor.h  Entity_Manager.h  System_Operations.h
include/data/: Teacher.h
include/data/course_types/: Lecture.h  Tutorial.h
include/schedule/: Schedule.h  Schedule_Manager.h
include/users/: Admin_User.h  Student_User.h  User.h
libs/SchedulerLib/include/data/: Course.h  Entity.h  Student.h
libs/SchedulerLib/include/data/course_types/: Course_Type.h  Lab.h
src/: CLI.cpp  CSV_Editor.cpp  Entity_Manager.cpp  System_Operations.cpp
src/data/: Course.cpp  Student.cpp  Teacher.cpp
src/data/course_types/: Course_Type.cpp  Lab.cpp  Lecture.cpp  Tutorial.cpp
src/schedule/: Schedule.cpp  Schedule_Manager.cpp
src/users/: Admin_User.cpp  Student_User.cpp  User.cpp
